More tests and DELETE account
